--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
-body {
-
+body
+{
+    background: #1e1f24;
     color: #333;
-    text-align: left;
-    font-family: "Arial";
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -10,7 +9,31 @@ body {
     padding: 0;
 }
 
-#container {
+#cabecera
+{
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container
+{
     width: 70%;
     padding: 0;
     text-align: left;
@@ -18,25 +41,12 @@ body {
     margin: 0 auto;
 }
 
-#container h1 {
+#container h1
+{
     font-size: 20px;
 }
-
-#post {
+#post
+{
+    background: white;
     padding: 1em;
-}
-
-#cabecera {
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
-}
-
-#cabecera #tagline {
-    padding: 0 0 0 1em;
-    font-weight: normal;
-    font-size: 0.8em;
 }
